--- a/style.css
+++ b/style.css
@@ -4,20 +4,21 @@ html {
 }
 
 body {
-  background: linear-gradient(to top, #ffffff 0%, #e0dd86 25%, #c4ad77 50%, #b38fb5 75%, #a7cae5 100%);
+  
+  background: radial-gradient(#ffffff 0%, #e0dd86 25%, #c4ad77 50%, #b38fb5 75%, #a7cae5 100%);
 }
 
 p {
   color: rgba(50, 60, 60, 0.6);
   font-weight: 400;
-  font-size: 10px;
+  font-size: 12px;
   text-align: center;
   letter-spacing: 4px;
-  margin: 20px 0 0;
+  margin: 30px 0 10px 0;
 }
 
 #box {
-  font-size: 3.3em;
+  font-size: 3em;
   letter-spacing: -0.045em;
   color: #FFF;
   text-align: center;
@@ -26,7 +27,7 @@ p {
   transition: all 0.2s ease;
 }
 
-.genre,.action,.things,.goals {
+#genre,#action,#things,#goals {
   opacity: 1;
   cursor: pointer;
   transition: all 0.2s ease;
@@ -35,19 +36,19 @@ p {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.action {
+#action {
   color: rgba(255, 205, 255, 0.95);
 }  
 
-.things {
+#things {
   color: rgba(160, 210, 255, 0.9);
 }  
 
-.goals {
+#goals {
   color: rgba(105, 255, 205, 0.8);
 }  
 
-.genre:hover,.action:hover,.things:hover,.goals:hover {
+#genre:hover,#action:hover,#things:hover,#goals:hover {
   text-shadow: 0 4px 4px rgba(255, 255, 255, 0.2), 0 6px 6px rgba(255, 255, 255, 0.4), 0 8px 18px rgba(255, 255, 255, 0.8), 0 22px 18px rgba(255, 255, 255, 0.5), 0 -4px 4px rgba(255, 255, 255, 0.2), 0 -6px 6px rgba(255, 255, 255, 0.4), 0 -8px 18px rgba(255, 255, 255, 0.8), 0 -22px 18px rgba(255, 255, 255, 0.5);
   color: rgba(255, 255, 255, 0.2);
   top: 12px;
